<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/kubik2"
    tools:context=".ZakazActivity">

    <ListView
        android:id="@+id/zakazList"
        android:layout_width="411dp"
        android:layout_height="360dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="11dp"
        app:layout_constraintBottom_toTopOf="@+id/TotalSum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textZakaz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="11dp"
        android:text="@string/zakaz"
        android:textColor="@color/black"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/zakazList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_logo"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="241dp"
        android:layout_height="80dp"
        android:layout_marginEnd="170dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dribbble2" />

    <TextView
        android:id="@+id/TotalSum"
        android:layout_width="200dp"
        android:layout_height="46dp"
        android:layout_marginBottom="160dp"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/setZakaz"
        android:layout_width="184dp"
        android:layout_height="69dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="@color/black"
        android:text="@string/set_zakaz"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/againScan" />

    <Button
        android:id="@+id/againScan"
        android:layout_width="184dp"
        android:layout_height="69dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="@color/black"
        android:text="@string/again"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/setZakaz"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>